--- a/TODO
+++ b/TODO
@@ -1,9 +1,5 @@
 # add a check no {} everywhere else
 
-server {
-	...
+# print example only when {} isssues
 
-	location ... {
-		...
-	}
-}
+# put a lot of config file too test everything
